crates/solidity/testing/snapshots/bindings_output/expressions/uint160_address_casting/generated/v1/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected CloseParen or Comma.
   ╭─[input.sol:2:26]
   │
 2 │     function foo(address payable _to) internal {}
   │                          ─────┬─────  
   │                               ╰─────── Error occurred here.
───╯
Error: Expected OpenBracket or Semicolon.
   ╭─[input.sol:6:29]
   │
 6 │     using Utils for address payable;
   │                             ───┬───  
   │                                ╰───── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ library Utils {
   │         ──┬──  
   │           ╰──── name: 1
 2 │     function foo(address payable _to) internal {}
   │              ─┬─  
   │               ╰─── name: 2
   │ 
 5 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 3
 6 │     using Utils for address payable;
   │           ──┬──  
   │             ╰──── ref: 1
   │ 
 8 │     function test(address _to) internal {
   │              ──┬─         ─┬─  
   │                ╰─────────────── name: 4
   │                            │   
   │                            ╰─── name: 5
 9 │         address(uint160(_to)).foo();  // should bind in >= 0.5.0 and < 0.8.0
   │                         ─┬─   ─┬─  
   │                          ╰───────── ref: 5
   │                                │   
   │                                ╰─── ref: 2
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │     ╭─▶ library Utils {
  2 │     │       function foo(address payable _to) internal {}
    │     │   ─────────────────────────┬────────────────────────  
    │     │                            ╰────────────────────────── definiens: 2
  3 │ │   ├─▶ }
    │ │   │       
    │ │   ╰─────── definiens: 1
  4 │ ╭─────▶ 
    ┆ ┆       
  7 │ │ ╭───▶ 
  8 │ │ │         function test(address _to) internal {
    │ │ │                       ─────┬─────  
    │ │ │                            ╰─────── definiens: 5
    ┆ ┆ ┆     
 10 │ │ ├───▶     }
    │ │ │             
    │ │ ╰───────────── definiens: 4
 11 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 3
────╯
